# bigcoin-bot

./: Cargo.toml  README.md
bigcoin-cli-main/: README.md  bigcoin.abi.json
bigcoin-cli-main/src/: commands.rs  main.rs
src/: add_starter.rs  claim.rs  initialize.rs  lib.rs  print.rs  provider_ext.rs  transfer.rs
