[package]
name = "bigcoin-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
alloy = { version = "0.14.0", features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
anyhow = { version = "1.0.97" }
async-trait = { version = "0.1.88" }
